--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.2.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-html5-camera-photo": "^1.5.4",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
