--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "file-loader": "^6.2.0",
+    "leaflet": "^1.7.1",
+    "n": "^6.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-html5-camera-photo": "^1.5.4",
+    "react-leaflet": "^3.0.2",
     "react-scripts": "4.0.1",
+    "stable": "^0.1.8",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --mode production",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -35,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
+    "@babel/preset-react": "^7.12.7",
+    "webpack-cli": "^4.2.0"
   }
 }
