--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "bootstrap": "^4.5.3",
     "file-loader": "^6.2.0",
     "leaflet": "^1.7.1",
     "n": "^6.7.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-html5-camera-photo": "^1.5.4",
     "react-leaflet": "^3.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "stable": "^0.1.8",
     "web-vitals": "^0.2.4"
