--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,11 @@
     "react-dom": "^17.0.1",
     "react-html5-camera-photo": "^1.5.4",
     "react-leaflet": "^3.0.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-persist": "^6.0.0",
     "stable": "^0.1.8",
     "web-vitals": "^0.2.4"
   },
@@ -49,6 +52,7 @@
     "@babel/core": "^7.12.9",
     "@babel/preset-env": "^7.12.7",
     "@babel/preset-react": "^7.12.7",
+    "redux-devtools": "^3.7.0",
     "webpack-cli": "^4.2.0"
   }
 }
