--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-html5-camera-photo": "^1.5.4",
     "react-leaflet": "^3.0.2",
     "react-redux": "^7.2.2",
