--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,9 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "file-loader": "^6.2.0",
+    "i18next": "^19.8.4",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "leaflet": "^1.7.1",
     "n": "^6.7.1",
     "react": "^17.0.1",
@@ -19,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
     "react-html5-camera-photo": "^1.5.4",
+    "react-i18next": "^11.8.4",
     "react-leaflet": "^3.0.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
