--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "axios": "^0.21.0",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "file-loader": "^6.2.0",
     "i18next": "^19.8.4",
@@ -24,6 +24,7 @@
     "react-html5-camera-photo": "^1.5.4",
     "react-i18next": "^11.8.4",
     "react-leaflet": "^3.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
