--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-dropzone": "^11.2.4",
+    "react-google-login": "^5.2.2",
     "react-html5-camera-photo": "^1.5.4",
     "react-i18next": "^11.8.4",
     "react-leaflet": "^3.0.2",
