--- a/client/package.json
+++ b/client/package.json
@@ -6,30 +6,33 @@
     "node": "14.x"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.2.2",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
+    "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "file-loader": "^6.2.0",
-    "i18next": "^19.8.4",
-    "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-http-backend": "^1.0.21",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.1.1",
+    "i18next-http-backend": "^1.2.2",
     "leaflet": "^1.7.1",
-    "n": "^6.7.1",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-dropzone": "^11.2.4",
+    "n": "^6.8.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-google-login": "^5.2.2",
     "react-html5-camera-photo": "^1.5.4",
-    "react-i18next": "^11.8.4",
-    "react-leaflet": "^3.0.2",
+    "react-i18next": "^11.8.15",
+    "react-leaflet": "^3.1.0",
     "react-loader-spinner": "^4.0.0",
-    "react-redux": "^7.2.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "redux": "^4.0.5",
+    "react-vk": "^5.0.2",
+    "react-vk-login": "0.0.2",
+    "react-vk-login-button": "^1.1.0",
+    "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "stable": "^0.1.8",
     "web-vitals": "^0.2.4"
